# connect_6

./: CMakeLists.txt  README.md  package-lock.json  package.json
docs/: ALGORITHM.md  DEVELOPMENT.md  USER_GUIDE.md
include/ai/: GameAI.h
include/core/: GameBoard.h  GameState.h  Player.h
include/gui/: GameBoardWidget.h  GameBoardWidgetIOS.h  MainMenuWidget.h  MainWindow.h
src/: main.cpp
src/ai/: GameAI.cpp
src/core/: GameBoard.cpp
src/gui/: GameBoardWidget.cpp  MainMenuWidget.cpp  MainWindow.cpp
